mongodb in progress

--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
-USER=surksha
-PASSWORD=12345
-PORT=3000
+DATABASE=mongodb+srv://dbsuraksha:<PASSWORD>@cluster0-qj7vv.mongodb.net/Natour-test?retryWrites=true&w=majority
+DATABASE_LOCAL=mongodb://localhost:27017/Natour-test
+PORT=8000
 DATABASE_PASSWORD=IPzpfVXQi96OoAIE
